[package]
name = "anchor-bac"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_bac"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.10.29"
anchor-lang = {version = "0.25.0", features = ["init-if-needed"]}
getrandom = { version = "0.2", features = ["js"] }
